implement list task feature

--- a/tasks.json
+++ b/tasks.json
@@ -1,9 +1,9 @@
 [
   {
     "id": 1,
-    "description": "build GoTasker",
+    "description": "solve leetcode",
     "status": "todo",
-    "createdAt": "2025-06-05T22:48:12.986155611+06:00",
-    "updatedAt": "2025-06-05T22:48:12.986155704+06:00"
+    "createdAt": "2025-06-05T23:12:46.770056999+06:00",
+    "updatedAt": "2025-06-05T23:12:46.770057145+06:00"
   }
 ]
